--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   chewie: ^0.9.10
   dio: ^3.0.9
   modal_progress_hud: ^0.1.3
+  video_player: ^0.10.11+2
+  flushbar: ^1.10.4
   dio_http_cache: ^0.2.7
   eva_icons_flutter: ^2.0.0
   cached_network_image: ^2.2.0+1
